src/objects/Auditor_s_Notes_How_to_Measure_Maturity__c.object
<CustomObject>
    <fields>
        <fullName>Auditor_s_Notes_How_to_Measure_Maturity__c</fullName>
        <label>Auditor’s Notes: How to Measure Maturity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Infinity_Response__c</fullName>
        <label>Infinity Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RMM_Factor__c</fullName>
        <label>RMM Factor</label>
        <referenceTo>Factor__c</referenceTo>
        <relationshipName>Auditor_s_Notes_How_to_Measure_Maturity</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>RMM Auditor’s Note</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NOTE-{000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RMM Auditor&apos;s Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>